--- a/app/views/sortings/index.html.erb
+++ b/app/views/sortings/index.html.erb
@@ -1,30 +1,32 @@
-<h1>String Sorter</h1>
+<div class="sorter-container">
+  <h1>String Sorter</h1>
 
-<%= form_with url: sortings_path, method: :post, local: true, data: { turbo: false } do %>
-  <div>
-    <%= label_tag :input, "Input String" %><br>
-    <%= text_field_tag :input, params[:input] %>
-  </div>
+  <%= form_with url: sortings_path, method: :post, local: true, data: { turbo: false } do %>
+    <div>
+      <%= label_tag :input, "Enter String:" %><br>
+      <%= text_field_tag :input, params[:input] %>
+    </div>
 
-  <br>
+    <br>
 
-  <div>
-    <%= label_tag :strategy, "Sorting Strategy" %><br>
-    <%= select_tag :strategy, options_for_select([
-      ["Bubble Sort", "bubble"],
-      ["Quick Sort", "quick"]
-    ]) %>
-  </div>
+    <div>
+      <%= label_tag :strategy, "Sorting Strategy:" %><br>
+      <%= select_tag :strategy, options_for_select([
+        ["Bubble Sort", "bubble"],
+        ["Quick Sort", "quick"]
+      ]) %>
+    </div>
 
-  <br>
+    <br>
 
-  <%= submit_tag "Sort" %>
-<% end %>
+    <%= submit_tag "Sort" %>
+  <% end %>
 
-<% if @result %>
-  <p><strong>Sorted Output:</strong> <%= @result %></p>
-<% end %>
+  <% if @result %>
+    <p class="result"><strong>Sorted Output:</strong> <%= @result %></p>
+  <% end %>
 
-<% if @error %>
-  <p style="color: red;"><%= @error %></p>
-<% end %>
+  <% if @error %>
+    <p class="error"><%= @error %></p>
+  <% end %>
+</div>
